--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 Initialise DGM repository under ~/xdev/dgm directory. Meanwhile, default DGM configuration file is created under user home directory ~/.dgm.
 
-dgm init -s ubuntu -l ~/xdev/dgm [-r gitRemoteURL]
+dgm init -s ubuntu -d ~/xdev/dgm [-r gitRemoteURL]
 
 Add a file to DGM repository, file could be with relative or absolute path.
 /etc/init.d$ dgm add nagios3 
