--- a/README.textile
+++ b/README.textile
@@ -1,11 +1,11 @@
 h2. Introduction
 
-A simple tool to wrap some git commands to managed files distributed in different directories. The most possible scenario is, there are many configuration files which need to backup during server setup. 
+A simple tool to wrap some git commands to managed files distributed in different directories. The most possible scenario is, there are configuration files distributed in various directories which need to backup during server setup. 
 The basic idea is copying the files into a central directory and keep its original path information, then use git to add, commit and push.  
 
 This script only test in Linux and OSX.
 
-Warning: It may have security risks since all files are put into same directory, suggest use sudo on all commands.    
+Warning: It may have security risks since all files are put into same repository, suggest use sudo on all commands.    
 
 h2. Prerequisite
 
